deployment/kaf-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-2

spec:
  ports:
    - name: web
      port: 8080
      targetPort: web

  selector:
    app: kafka-ui
